<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lblSubTitulo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardUserList"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/imgIMC"
                app:srcCompat="@drawable/imc"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPesoText"
                    android:textSize="@dimen/labels_geral" />

                <SeekBar
                    android:id="@+id/skbPeso"
                    style="@android:style/Widget.Material.SeekBar"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/Sliders"
                    android:indeterminate="false"
                    android:max="2500"
                    android:progress="700"
                    android:progressTint="@color/Progresso" />

                <TextView
                    android:id="@+id/txtAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtAlturaText"
                    android:textSize="@dimen/labels_geral" />

                <SeekBar
                    android:id="@+id/skbAltura"
                    android:layout_width="300dp"
                    android:layout_height="@dimen/Sliders"
                    android:max="200"
                    android:progress="150"
                    android:progressTint="@color/Progresso" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnCalcular"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnCalcularText"
                        android:textAlignment="center"
                        app:backgroundTint="@color/Progresso"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/txtIMCText"
                android:textSize="@dimen/labels_geral"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/rtbIMC"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:isIndicator="true"
                android:max="300"
                android:numStars="7"
                android:progressTint="@color/Progresso"
                android:stepSize="40"
                app:layout_constraintBottom_toTopOf="@+id/txtResultadoTexto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIMC"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/txtResultadoTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:textSize="@dimen/labels_geral"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rtbIMC" />

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="@dimen/labels_geral"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtIMC" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtPesoIdeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PesoIdeal"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/labels_geral"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:textAlignment="center"
            app:backgroundTint="@color/Progresso"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListar"
            android:textAlignment="center"
            app:backgroundTint="@color/Progresso"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>